[package]
name = "module-evm"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
impl-trait-for-tuples = "0.1"
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
primitive-types = { version="0.13.1", default-features = false, features = ["rlp", "byteorder","scale-info"] }
ripemd160 = { version = "0.9", default-features = false }
rlp = { version = "0.6.0", default-features = false }
serde = { version = "1.0.145",  default-features = false,features = ["derive","alloc"] }
sha3 = { version = "0.8", default-features = false }
tiny-keccak = { version = "2.0", features = ["fips202"] }
log = { version = "0.4.14", default-features = false }

evm = { git = "https://github.com/reef-chain/reef-chain-evm-pallet",branch = "feat/version-stable2506",default-features = false,features = ["with-codec"] }
evm-gasometer  = { git = "https://github.com/reef-chain/reef-chain-evm-pallet",branch = "feat/version-stable2506",default-features = false }
evm-runtime = { git = "https://github.com/reef-chain/reef-chain-evm-pallet",branch = "feat/version-stable2506",default-features = false }

frame-support= { workspace = true ,default-features = false }
frame-system = { workspace = true ,default-features = false }
pallet-balances = { workspace = true ,default-features = false }
pallet-timestamp = { workspace = true ,default-features = false }

sp-core = { workspace = true ,default-features = false }

sp-io = { workspace = true ,default-features = false }
sp-runtime = { workspace = true ,default-features = false }
sp-std = { workspace = true ,default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
env_logger = "0.7"
orml-tokens = { path = "../../orml/tokens", default-features = false }
module-currencies = { path = "../currencies", default-features = false }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sp-core/std",
	"scale-info/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"pallet-timestamp/std",
	"ripemd160/std",
	"primitives/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"orml-traits/std",
	"support/std",
	"log/std",
	"orml-tokens/std",
	"module-currencies/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
with-ethereum-compatibility = []