[package]
name = "module-support"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { workspace = true ,default-features = false }
frame-support = { workspace = true ,default-features = false }
sp-std = { workspace = true ,default-features = false }
sp-core = { workspace = true ,default-features = false }
ethereum-types = { version = "0.12.0", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"sp-std/std",
	"primitives/std",
	"orml-traits/std",
]
