[package]
name = "module-transaction-payment"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
sp-runtime = { workspace = true ,default-features = false }
frame-support = { workspace = true ,default-features = false }
frame-system = { workspace = true ,default-features = false }
sp-std = { workspace = true ,default-features = false }
sp-io = { workspace = true ,default-features = false }
pallet-balances = { workspace = true ,default-features = false }
pallet-proxy = { workspace = true ,default-features = false }
pallet-transaction-payment-rpc-runtime-api  = { workspace = true ,default-features = false }
log = { version = "0.4.14", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
module-currencies = { path = "../../modules/currencies", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }


[dev-dependencies]
sp-core = { workspace = true ,default-features = false }
smallvec = "1.4.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"orml-tokens/std",
	"module-currencies/std",
	"scale-info/std",
	"pallet-balances/std",
	"pallet-proxy/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"primitives/std",
	"support/std",
	"orml-traits/std",
]
