[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/tokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.124", optional = true }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive","max-encoded-len"] }
sp-runtime = { workspace = true ,default-features = false }
sp-std = { workspace = true ,default-features = false }
log = { version = "0.4.20", default-features = false }
frame-support = { workspace = true ,default-features = false }
frame-system = { workspace = true ,default-features = false }
sp-arithmetic= { workspace = true, default-features = false} 
orml-traits = { path = "../traits", version = "0.4.1-dev", default-features = false }

[dev-dependencies]
sp-io = { workspace = true ,default-features = false }
sp-core = { workspace = true ,default-features = false }
pallet-treasury = { workspace = true ,default-features = false }
pallet-elections-phragmen = { workspace = true ,default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"sp-arithmetic/std",
	"frame-system/std",
	"orml-traits/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
