[package]
name = "orml-traits"
description = "Shared traits including `BasicCurrency`, `MultiCurrency`, `Auction` and more."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/traits"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.2"
paste = "1.0"

sp-runtime = { workspace = true ,default-features = false, features = ["serde"] }
sp-core = { workspace = true , default-features = false }
sp-io = { workspace = true , default-features = false }
sp-std = { workspace = true , default-features = false }
frame-support = { workspace = true , default-features = false }

xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "stable2512" }

orml-utilities = { path = "../utilities", version = "0.4.1-dev", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
	"orml-utilities/std",
	"xcm/std",
]
