[package]
name = "runtime-common"
version = "0.7.3"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-std = { workspace = true ,default-features = false }
sp-core = { workspace = true ,default-features = false }
sp-runtime = { workspace = true ,default-features = false }
frame-support = { workspace = true ,default-features = false }
frame-system = { workspace = true ,default-features = false }
pallet-scheduler = { workspace = true ,default-features = false }
log = { version = "0.4.14", default-features = false }

module-evm = { path = "../../modules/evm", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

module-support = { path = "../../modules/support", default-features = false }
module-transaction-payment = { path = "../../modules/transaction_payment", default-features = false }
primitives = { package = "reef-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
serde_json = "1.0.41"
hex-literal = "0.3.1"
sp-io = { workspace = true }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-proxy = { workspace = true }
pallet-utility = { workspace = true }
pallet-preimage = { workspace = true }
orml-tokens = { path = "../../orml/tokens" }
module-currencies = { path = "../../modules/currencies" }
module-evm-bridge = { path = "../../modules/evm-bridge" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	 "sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"module-evm/std",
	"orml-traits/std",
	"module-support/std",
	"primitives/std",
	"module-transaction-payment/std",
]
with-ethereum-compatibility = []
