[package]
name = "pallet-revive-proc-macro"
version = "0.7.1"
authors = ["Reef Developers"]
description = "Proof of Commitment module"
edition = "2021"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = ["full"], workspace = true }
