[package]
name = "pallet-revive-uapi"
version = "0.10.1"
authors = ["Reef Developers"]
description = "Proof of Commitment module"
edition = "2021"


[lints]
workspace = true

[package.metadata.docs.rs]
features = ["unstable-hostfn"]
targets = ["riscv64imac-unknown-none-elf"]

[dependencies]
alloy-core = { workspace = true, optional = true, features = ["sol-types"] }
bitflags = { workspace = true }
codec = { features = [
	"derive",
	"max-encoded-len",
], optional = true, workspace = true }
const-crypto = { version = "0.3.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
pallet-revive-proc-macro.workspace = true
scale-info = { features = ["derive"], optional = true, workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
polkavm-derive = { version = "0.30.0" }

[features]
default = ["scale"]
scale = ["dep:codec", "scale-info"]
precompiles-sol-interfaces = ["alloy-core"]
unstable-hostfn = []
