[package]
name = "orml-tokens-runtime-api"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"
license = "Apache-2.0"
description = "Runtime API module for orml-tokens."

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { workspace = true , default-features = false }
sp-api = { workspace = true , default-features = false }
sp-runtime = { workspace = true , default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
]
