[package]
name = "module-evm-rpc-runtime-api"
version = "0.1.0"
authors = ["Reef Developers"]
edition = "2021"

[dependencies]
sp-runtime = { workspace = true ,default-features = false }
sp-api = { workspace = true ,default-features = false }
sp-std = { workspace = true ,default-features = false }
sp-core = { workspace = true ,default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
ethereum-types = { version = "0.15.0", default-features = false,features = ["scale-info"]  }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
primitives = { package = "reef-primitives", path = "../../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-api/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"ethereum-types/std",
	"primitives/std",
]
